--- a/.config/config_template.yaml
+++ b/.config/config_template.yaml
@@ -4,4 +4,5 @@ github:
   repo: ${GITHUB_REPO}
 
 storage:
-  path: .config/values.json
+  state_path: .config/values.json
+  plot_path: .config/plot.html
